force-app/main/default/objects/leaseworks__Global_Fleet__c/leaseworks__Global_Fleet__c.object-meta.xml
<CustomObject>
    <label>World Fleet</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>World Fleet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>