force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Aircraft_Class__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Class__c</fullName>
    <label>Aircraft Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>