force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Aircraft_Type_Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Type_Variant__c</fullName>
    <formula>leaseworks__Type_Variant__c  &amp;&quot;-&quot;&amp; leaseworks__EngineVariant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aircraft &amp; Engine Variant</label>
    <type>Text</type>
</CustomField>