force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__AircraftManufacturer__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__AircraftManufacturer__c</fullName>
    <label>Manufacturer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>