force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__AircraftType__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__AircraftType__c</fullName>
    <label>Aircraft Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>