force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__AircraftVariant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__AircraftVariant__c</fullName>
    <label>Aircraft Variant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>