force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Annual_Total_Cycles__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Annual_Total_Cycles__c</fullName>
    <label>Annual Total Cycles</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>