force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Date_Manufactured__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Manufactured__c</fullName>
    <label>Date Manufactured</label>
    <type>Date</type>
</CustomField>