force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__EffectiveDate__c</fullName>
    <label>Data As Of</label>
    <type>Date</type>
</CustomField>