force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__EngineVariant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__EngineVariant__c</fullName>
    <label>Engine Variant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>