force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__In_Service_Date_date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__In_Service_Date_date__c</fullName>
    <label>In Service Date</label>
    <type>Date</type>
</CustomField>