force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Lease_Expiry__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Expiry__c</fullName>
    <label>Lease End</label>
    <type>Date</type>
</CustomField>