force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Lease_From__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_From__c</fullName>
    <label>Lease Start</label>
    <type>Date</type>
</CustomField>