force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_Type__c</fullName>
    <label>Lease Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>