force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Lessor_Owner_Country_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Owner_Country_Territory_Code__c</fullName>
    <label>Lessor/Owner Country/Territory Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>