force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LineNumber__c</fullName>
    <label>Line Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>