force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Manager__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Manager__c</fullName>
    <label>Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>