force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator__c</fullName>
    <label>Operator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>