force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Operator_Company_Category__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator_Company_Category__c</fullName>
    <label>Operator Company Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>