force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Operator_IATA_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Operator_IATA_Code__c</fullName>
    <label>Operator IATA Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>