force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__OperatorArea__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__OperatorArea__c</fullName>
    <label>Operator Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>