force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__OperatorCountry__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__OperatorCountry__c</fullName>
    <label>Operator Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>