force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Owner__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Owner__c</fullName>
    <label>Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>