force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Related_Original_Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_Original_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Related Original Operator</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipLabel>Z_Unused_OP World Fleet (Related Original Operator)</relationshipLabel>
    <relationshipName>World_Fleet</relationshipName>
    <type>Lookup</type>
</CustomField>