force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Related_Owner__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This reference is automatically filled by the system with a Lessor matching by Name or Alias the value in the field &apos;Manager&apos;</description>
    <label>Z_Unused_2206 Related To Lessor(Manager)</label>
    <referenceTo>leaseworks__Counterparty__c</referenceTo>
    <relationshipLabel>Z_Unused_2206 World Fleet</relationshipLabel>
    <relationshipName>Global_Fleet</relationshipName>
    <type>Lookup</type>
</CustomField>