force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Related_To_Counterparty__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Related_To_Counterparty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This reference is automatically filled by the system with a Counterparty matching by Name or Alias the value in the field Manager</description>
    <label>Z_Unused2206 RelatedToCounterparty(Mngr)</label>
    <referenceTo>leaseworks__Bank__c</referenceTo>
    <relationshipLabel>World Fleet</relationshipLabel>
    <relationshipName>World_Fleet</relationshipName>
    <type>Lookup</type>
</CustomField>