force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Role__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Role__c</fullName>
    <label>Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>