force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Utilisation_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilisation_Rate__c</fullName>
    <label>Utilisation Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>