force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Valuation_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Valuation_Date__c</fullName>
    <label>Valuation Date</label>
    <type>Date</type>
</CustomField>