force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/leaseworks__Y_Hidden_YOM_F_c__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_YOM_F_c__c</fullName>
    <formula>VALUE(leaseworks__BuildYear__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_YOM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>