force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/Participant_1__c.field-meta.xml
<CustomField>
    <fullName>Participant_1__c</fullName>
    <label>Participant 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>