force-app/main/default/objects/leaseworks__Global_Fleet__c/fields/Storage_Location_Region__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location_Region__c</fullName>
    <label>Storage Location Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>