force-app/main/default/objects/leaseworks__Global_Fleet__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Registration__c</columns>
    <columns>leaseworks__Aircraft_Sub_Series__c</columns>
    <columns>leaseworks__Engine_Sub_Series__c</columns>
    <columns>leaseworks__BuildYear__c</columns>
    <columns>leaseworks__Lease_Expiry__c</columns>
    <columns>leaseworks__Aircraft_Operator_New__c</columns>
    <columns>leaseworks__Related_To_Counterparty_Ownr__c</columns>
    <columns>leaseworks__Owner__c</columns>
    <columns>leaseworks__SeatTotal__c</columns>
    <columns>leaseworks__AircraftStatus__c</columns>
    <columns>leaseworks__MTOW__c</columns>
    <columns>Certified_MTOW_lb__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>